--- a/scss/_colors.scss
+++ b/scss/_colors.scss
@@ -1,3 +1,7 @@
 $primary-color:#FFF8B4;
 $secondary-color:#d0bd93;
 $shadow-color:#3f3835;
+$black: #000;
+$white: #fff;
+$dark-brown:#615651;
+$light-brown:#e9dab6;
