--- a/style/main.css
+++ b/style/main.css
@@ -50,9 +50,9 @@ header {
         --clippy: polygon(0 0, 0 0, 0 100%, 0% 100%);
         background-color: #FFF8B4;
         color: #000;
-        height: 40px;
+        height: 50px;
         border: 2px solid #000;
-        padding: 3px;
+        padding: 5px;
         box-shadow: #3f3835 3px 5px; }
         .nav .nav__container .nav__menu .nav__item::after {
           content: "";
@@ -91,10 +91,7 @@ header {
 main {
   border-top: #3f3835 5px solid;
   background-image: url(../assets/Wave.svg);
-  background-size: cover;
-  background-color: #e9dab6; }
-  main span {
-    background-color: #888; }
+  background-size: cover; }
   main h1 {
     font-size: 25px;
     font-weight: bold;
@@ -124,21 +121,91 @@ main {
         height: auto;
         width: 90%;
         margin-bottom: 2rem; } }
-    @media (max-width: 576px) {
-      main .info .info__img {
-        height: 200px;
-        object-fit: cover; } }
+    main .info .info__img {
+      border: 5px solid #3f3835; }
+      @media (max-width: 576px) {
+        main .info .info__img {
+          height: 300px;
+          object-fit: cover; } }
   main .height-info {
     height: 130vh; }
     @media (max-width: 576px) {
       main .height-info {
-        height: 160vh; } }
+        height: 195vh; } }
+  @media (max-width: 576px) {
+    main {
+      height: auto; } }
 
 .centre {
-  min-height: 90vh;
+  height: 110vh;
   display: flex;
   justify-content: space-around;
   align-items: center; }
+  .centre .main__layout-2 {
+    display: flex;
+    background-color: #FFF8B4;
+    padding: 25px;
+    align-items: center;
+    box-shadow: 10px 15px #3f3835;
+    border: 2px solid #000;
+    height: 450px; }
+    @media (max-width: 576px) {
+      .centre .main__layout-2 {
+        flex-direction: column;
+        justify-content: space-between;
+        width: 90%;
+        height: 850px; } }
+    .centre .main__layout-2 .main__organization {
+      display: flex;
+      height: 300px;
+      align-items: center;
+      text-align: left;
+      padding: 30px;
+      justify-content: space-between; }
+      @media (max-width: 576px) {
+        .centre .main__layout-2 .main__organization {
+          flex-direction: column;
+          width: 90%;
+          padding: 5px; } }
+      .centre .main__layout-2 .main__organization .divi {
+        width: 550px; }
+        .centre .main__layout-2 .main__organization .divi .masInfo {
+          padding: 10px;
+          background-color: #3f3835;
+          color: #fff;
+          box-shadow: #222 3px 5px;
+          margin: 10px; }
+          @media (max-width: 576px) {
+            .centre .main__layout-2 .main__organization .divi .masInfo .margin {
+              margin: 10px; } }
+          .centre .main__layout-2 .main__organization .divi .masInfo:active {
+            background-color: #c4ac7e;
+            color: #000; }
+        @media (max-width: 576px) {
+          .centre .main__layout-2 .main__organization .divi {
+            width: 100%; } }
+      .centre .main__layout-2 .main__organization .divi h1 {
+        text-align: left;
+        font-size: 40px; }
+        @media (max-width: 576px) {
+          .centre .main__layout-2 .main__organization .divi h1 {
+            font-size: 25px; } }
+      .centre .main__layout-2 .main__organization .divi h3 {
+        font-size: 25px; }
+        @media (max-width: 576px) {
+          .centre .main__layout-2 .main__organization .divi h3 {
+            font-size: 18px; } }
+    .centre .main__layout-2 .carousel {
+      border: 5px solid #3f3835;
+      margin: 10px; }
+      .centre .main__layout-2 .carousel .carousel-item {
+        width: 450px; }
+        @media (max-width: 576px) {
+          .centre .main__layout-2 .carousel .carousel-item {
+            width: 100%; } }
+      .centre .main__layout-2 .carousel .carousel-control-next-icon,
+      .centre .main__layout-2 .carousel .carousel-control-prev-icon {
+        background-color: #888; }
   .centre .main__layout {
     display: flex;
     background-color: #FFF8B4;
@@ -151,47 +218,40 @@ main {
         flex-direction: column;
         justify-content: space-between;
         width: 90%;
-        height: 650px; } }
-    .centre .main__layout .main__organization {
-      display: flex;
-      height: 300px;
-      align-items: center;
-      text-align: left;
-      padding: 30px;
-      justify-content: space-between; }
+        height: auto; } }
+    @media (max-width: 576px) {
+      .centre .main__layout .main__organization {
+        flex-direction: column;
+        width: 90%;
+        padding: 5px; } }
+    .centre .main__layout .main__organization .divi {
+      width: 550px; }
+      .centre .main__layout .main__organization .divi .masInfo {
+        padding: 10px;
+        background-color: #3f3835;
+        color: #fff;
+        box-shadow: #222 3px 5px;
+        margin: 10px; }
+        @media (max-width: 576px) {
+          .centre .main__layout .main__organization .divi .masInfo .margin {
+            margin: 10px; } }
+        .centre .main__layout .main__organization .divi .masInfo:active {
+          background-color: #c4ac7e;
+          color: #000; }
       @media (max-width: 576px) {
-        .centre .main__layout .main__organization {
-          flex-direction: column;
-          width: 90%;
-          padding: 5px; } }
-      .centre .main__layout .main__organization .divi {
-        width: 550px; }
-        .centre .main__layout .main__organization .divi .masInfo {
-          padding: 10px;
-          background-color: #3f3835;
-          color: #fff;
-          box-shadow: #333 3px 5px;
-          margin: 10px; }
-          @media (max-width: 576px) {
-            .centre .main__layout .main__organization .divi .masInfo .margin {
-              margin: 10px; } }
-          .centre .main__layout .main__organization .divi .masInfo:active {
-            background-color: #c4ac7e;
-            color: #000; }
-        @media (max-width: 576px) {
-          .centre .main__layout .main__organization .divi {
-            width: 100%; } }
-      .centre .main__layout .main__organization .divi h1 {
-        text-align: left;
-        font-size: 40px; }
-        @media (max-width: 576px) {
-          .centre .main__layout .main__organization .divi h1 {
-            font-size: 25px; } }
-      .centre .main__layout .main__organization .divi h3 {
-        font-size: 25px; }
-        @media (max-width: 576px) {
-          .centre .main__layout .main__organization .divi h3 {
-            font-size: 18px; } }
+        .centre .main__layout .main__organization .divi {
+          width: 100%; } }
+    .centre .main__layout .main__organization .divi h1 {
+      text-align: left;
+      font-size: 40px; }
+      @media (max-width: 576px) {
+        .centre .main__layout .main__organization .divi h1 {
+          font-size: 25px; } }
+    .centre .main__layout .main__organization .divi h3 {
+      font-size: 25px; }
+      @media (max-width: 576px) {
+        .centre .main__layout .main__organization .divi h3 {
+          font-size: 18px; } }
     .centre .main__layout .carousel {
       border: 5px solid #3f3835;
       margin: 10px; }
@@ -200,6 +260,104 @@ main {
         @media (max-width: 576px) {
           .centre .main__layout .carousel .carousel-item {
             width: 100%; } }
+
+.height-testimonial {
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  text-align: center; }
+  .height-testimonial .deploy-menu, .height-testimonial .testimonial-centre .deploy-menu {
+    position: relative;
+    display: inline-block;
+    width: 400px; }
+    .height-testimonial .deploy-menu .divi1, .height-testimonial .testimonial-centre .deploy-menu .divi1 {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      transition: 500ms;
+      padding: 4px 8px;
+      text-decoration: none;
+      width: 400px;
+      text-align: center;
+      margin: 0 auto; }
+      .height-testimonial .deploy-menu .divi1 .title-name, .height-testimonial .testimonial-centre .deploy-menu .divi1 .title-name {
+        border: 2px solid #000;
+        background-color: #FFF8B4;
+        box-shadow: #333 3px 5px;
+        color: #000;
+        padding: 8px 16px;
+        font-size: 16px;
+        cursor: pointer;
+        margin: 3rem; }
+      .height-testimonial .deploy-menu .divi1 .testimonial-info, .height-testimonial .testimonial-centre .deploy-menu .divi1 .testimonial-info {
+        display: flex;
+        align-items: center; }
+        .height-testimonial .deploy-menu .divi1 .testimonial-info .testimonial-name, .height-testimonial .testimonial-centre .deploy-menu .divi1 .testimonial-info .testimonial-name {
+          display: flex;
+          flex-direction: column;
+          margin: 0;
+          font-size: 1.2rem;
+          font-weight: bold;
+          color: #777;
+          visibility: hidden; }
+        .height-testimonial .deploy-menu .divi1 .testimonial-info .testimonial-img, .height-testimonial .testimonial-centre .deploy-menu .divi1 .testimonial-info .testimonial-img {
+          height: 100px;
+          width: 120px;
+          border-radius: 50%;
+          margin-right: 10px;
+          visibility: hidden; }
+      .height-testimonial .deploy-menu .divi1:hover {
+        background-color: #FFF8B4;
+        text-align: center;
+        border: 2px solid #000;
+        box-shadow: 10px 15px #3f3835;
+        width: 80%;
+        margin: 30px auto; }
+      .height-testimonial .deploy-menu .divi1:hover > .title-name {
+        border: none;
+        box-shadow: none;
+        color: #000; }
+      .height-testimonial .deploy-menu .divi1:hover > p {
+        visibility: visible; }
+      .height-testimonial .deploy-menu .divi1:hover > .testimonial-info > .testimonial-name > span {
+        visibility: visible; }
+      .height-testimonial .deploy-menu .divi1:hover > .testimonial-info > .testimonial-img {
+        visibility: visible; }
+      .height-testimonial .deploy-menu .divi1:hover > .testimonial-info > span {
+        visibility: visible; }
+    .height-testimonial .deploy-menu .divi1 p, .height-testimonial .testimonial-centre .deploy-menu .divi1 p {
+      visibility: hidden; }
+    .height-testimonial .deploy-menu:hover {
+      display: block;
+      width: 400px; }
+  .height-testimonial .testimonial-centre {
+    display: flex;
+    justify-content: space-around;
+    align-items: center; }
+    .height-testimonial .testimonial-centre .deploy-menu .divi1:hover {
+      background-color: #FFF8B4;
+      text-align: center;
+      border: 2px solid #000;
+      box-shadow: 10px 15px #3f3835;
+      width: 80%;
+      margin: 30px auto; }
+    .height-testimonial .testimonial-centre .deploy-menu .divi1:hover > .title-name {
+      border: none;
+      box-shadow: none;
+      color: #000; }
+    .height-testimonial .testimonial-centre .deploy-menu .divi1:hover > p {
+      visibility: visible; }
+    .height-testimonial .testimonial-centre .deploy-menu .divi1:hover > .testimonial-info > .testimonial-name > span {
+      visibility: visible; }
+    .height-testimonial .testimonial-centre .deploy-menu .divi1:hover > .testimonial-info > .testimonial-img {
+      visibility: visible; }
+    .height-testimonial .testimonial-centre .deploy-menu .divi1:hover > .testimonial-info > span {
+      visibility: visible; }
+    .height-testimonial .testimonial-centre .deploy-menu .divi1 p {
+      visibility: hidden; }
+    .height-testimonial .testimonial-centre .deploy-menu:hover {
+      display: block;
+      width: 400px; }
 
 .login {
   display: flex;
@@ -218,11 +376,11 @@ main {
     height: 300px;
     width: 70%;
     opacity: .9; }
-  .login .buttons-ctc {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    margin: 2rem; }
+  .login .masInfo {
+    padding: 10px;
+    background-color: #3f3835;
+    color: #fff;
+    box-shadow: #333 3px 5px; }
   @media (max-width: 576px) {
     .login .height {
       height: 40vh; } }
