--- a/style/style.css
+++ b/style/style.css
@@ -19,15 +19,9 @@ main {
     border-top: #3f3835 5px solid;
     background-image: url(../assets/Wave.svg);
     background-size: cover;
-    height: 130vh;
     background-color: #e9dab6;
 }
 
-
-
-span {
-    background-color: #888;
-}
 
 h1 {
     font-size: 25px;
@@ -184,6 +178,118 @@ h3 {
     color: #000
 }
 
+  
+.testimonial-info {
+    display: flex;
+    align-items: center;
+    visibility: visible;
+  }
+
+  
+  .testimonial-info img {
+    border-radius: 50%;
+    margin-right: 10px;
+    visibility: hidden;
+  }
+  
+    
+ .divi1:hover> .testimonial-info> img {
+    visibility: visible;
+  }
+  
+  .divi1:hover> .testimonial-info> span {
+    visibility: visible;
+  }
+
+  .testimonial-name {
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+    font-size: 1.2rem;
+    font-weight: bold;
+    color: #777;
+    visibility: hidden;
+  }
+
+  .divi1:hover> .testimonial-info> .testimonial-name> span {
+    visibility: visible;
+  }
+
+  .deploy-menu {
+    position: relative;
+    display: inline-block;
+    width: 400px;
+  }
+  
+   
+  .deploy-menu:hover{
+    display: block;
+    width: 400px;
+  }
+
+  .height-testimonial {
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+.title-name{
+    border: 2px solid #000;
+    background-color: #FFF8B4;
+    box-shadow: #333 3px 5px;
+    color: #000;
+    padding: 8px 16px;
+    font-size: 16px;
+    cursor: pointer;
+    margin: 3rem;
+}
+
+.divi1:hover> .title-name{    
+    border: none;
+    box-shadow: none;
+    color: #000;
+}
+
+
+  .divi1 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    transition: 500ms;
+    padding: 4px 8px;
+    text-decoration: none;
+    width: 400px;
+    text-align: center;
+    margin: 0 auto;
+  }
+
+.divi1:hover{
+    background-color: #FFF8B4;
+    text-align: center;
+    border: 2px solid #000;    
+    box-shadow: 10px 15px #3f3835;
+    width: 80%;
+    margin: 30px auto 0;
+
+}
+
+
+.divi1 p {
+    visibility: hidden;
+}
+
+.divi1:hover > p {
+    visibility: visible;
+}
+
+
+.testimonial-centre{
+    margin: 0 auto;
+}
+
 
 /*INFORMACION*/
 
@@ -229,10 +335,6 @@ h3 {
 
 
 /*FIN FORMULARIO LOGIN*/
-
-/*TIMELINE*/
-
-/*FIN TIMELINE*/
 
 /*FOOTER*/
 
@@ -306,6 +408,10 @@ h3 {
 /*FIN FOOTER*/
 
 @media (max-width: 576px) {
+
+    .testimonial-card{
+        width: 90%;
+    }
 
     main {
         height: auto;
