--- a/scss/app.scss
+++ b/scss/app.scss
@@ -29,12 +29,13 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
+
     .nav__logo {
         box-shadow: $shadow-color 3px 5px;
         border: $black 2px solid;
         width: 350px;
         margin-left: 30px;
-        @media (max-width:576px) {
+        @media (max-width:1175px) {
             box-shadow: none;
             border: none;
             width: 250px;
@@ -46,7 +47,7 @@ header {
         .nav__img {
             width: 40px;
         }
-        @media (max-width:576px) {
+        @media (max-width:1175px) {
             display: block;
             cursor: pointer;
         }
@@ -75,6 +76,7 @@ header {
             }
             &:hover {
                 scale: 1.1;
+                transition: .3s;
             }
             a {
                 text-decoration: none;
@@ -82,7 +84,7 @@ header {
             }
         }
 
-        @media (max-width:576px) {
+        @media (max-width:1175px) {
             border-top: $dark-brown 4px solid;
             position: fixed;
             top: 80px;
@@ -95,7 +97,8 @@ header {
             flex-direction: column;
             align-items: center;
             clip-path: circle(0 at center);
-            z-index: 10;
+            z-index: 10;            
+            transition: clip-path .5s ease-in-out;
         }
     }
 }
@@ -104,6 +107,8 @@ header {
     background-color: $light-brown;
     clip-path: circle(100% at center);
 }
+
+
 
 /*FIN HEADER*/
 /*INICIO MAIN*/
@@ -138,7 +143,7 @@ main {
         box-shadow: 10px 15px $shadow-color;
         padding: 20px;
         margin: 1.5rem auto;
-        @media (max-width:576px) {
+        @media (min-width:375px) and (max-width:820px) {
             flex-direction: column;
             height: auto;
             width: 90%;
@@ -147,7 +152,7 @@ main {
         .info__img {
             border: 5px solid $shadow-color;
             margin: 10px;
-            @media (max-width:576px) {
+            @media (min-width:375px) and (max-width:820px) {
                 height: 300px;
                 object-fit: cover;
             }
@@ -157,9 +162,9 @@ main {
     .height-info {
         margin: 2rem 0;
     }
-    @media (max-width:576px) {
+    @media (min-width:375px) and (max-width:820px) {
         height: auto;
-        padding: 2rem 0rem;
+        padding: 3rem 0rem;
     }
 }
 
@@ -167,9 +172,8 @@ main {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    padding: 2rem 0;
     height: 85vh;
-    @media (max-width:576px) {
+    @media (min-width:375px) and (max-width:820px) {
         height: auto;
     }
     .main__layout-2 {
@@ -180,17 +184,23 @@ main {
         box-shadow: 10px 15px $shadow-color;
         border: 2px solid $black;
         height: 450px;
-        @media (max-width:576px) {
+        @media (min-width:375px) and (max-width:820px) {
             flex-direction: column;
             justify-content: space-between;
             width: 90%;
-            height: 900px;
+            height: auto;
         }
+
         .main__organization {
             @include main__display;
             padding: 30px;
             text-align: left;
-            @media (max-width:576px) {
+            @media (min-width:375px) and (max-width:820px) {
+                flex-direction: column;
+                width: 90%;
+                padding: 5px;
+            }
+            @media (min-width:375px) and (max-width:820px) {
                 flex-direction: column;
                 width: 90%;
                 padding: 5px;
@@ -203,47 +213,61 @@ main {
                     color: $white;
                     box-shadow: #222 3px 5px;
                     margin: 10px;
-                    @media (max-width:576px) {
-                        .margin {
-                            margin: 10px;
-                        }
-                    }
                     &:active {
                         background-color: #c4ac7e;
                         color: $black
                     }
+                                
+                    &:hover {
+                        scale: 1.1;
+                        transition: .3s;
+                    }
                 }
-                @media (max-width:576px) {
+                @media (min-width:375px) and (max-width:820px) {
                     width: 100%;
                 }
             }
+
             .divi h1 {
                 text-align: left;
                 font-size: 40px;
-                @media (max-width:576px) {
+                @media (min-width:375px) and (max-width:820px) {
                     font-size: 25px;
                 }
             }
             .divi h3 {
                 font-size: 25px;
-                @media (max-width:576px) {
+                @media (min-width:375px) and (max-width:820px) {
                     font-size: 18px;
                 }
             }
         }
+
         .carousel {
             border: 5px solid $shadow-color;
             margin: 10px;
             width: 350px;
             .carousel-item {
                 width: 350px;
-                @media (max-width:576px) {
+                @media (min-width:375px) and (max-width:820px) {
                     width: 100%;
                 }
             }
             .carousel-control-next-icon,
             .carousel-control-prev-icon {
                 background-color: #888;
+            }
+
+                        
+            &:hover {
+                scale: 1.1;
+                transition: .3s;
+            }
+
+            @media (min-width:375px) and (max-width:820px) {                
+                &:hover {
+                    scale: 1;
+                }
             }
         }
     }
@@ -267,7 +291,7 @@ main {
             text-align: center;
             width: 250px;
             margin: 0 auto;
-            @media (max-width:576px) {
+            @media (min-width:375px) and (max-width:820px) {
                 flex-direction: column;
                 width: 90%;
                 padding: 5px;
@@ -277,7 +301,7 @@ main {
                     color: $white;
                     box-shadow: #222 3px 5px;
                     margin: 10px;
-                    @media (max-width:576px) {
+                    @media (min-width:375px) and (max-width:820px) {
                         .margin {
                             margin: 10px;
                         }
@@ -291,13 +315,13 @@ main {
 
             .divi h1 {
                 font-size: 40px;
-                @media (max-width:576px) {
+                @media (min-width:375px) and (max-width:820px){
                     font-size: 25px;
                 }
             }
             .divi h3 {
                 font-size: 25px;
-                @media (max-width:576px) {
+                @media (min-width:375px) and (max-width:820px) {
                     font-size: 18px;
                 }
             }
@@ -307,7 +331,7 @@ main {
             margin: 10px;
             .carousel-item {
                 width: 450px;
-                @media (max-width:576px) {
+                @media (min-width:375px) and (max-width:820px) {
                     width: 100%;
                 }
             }
@@ -324,8 +348,8 @@ main {
         position: relative;
         display: inline-block;
         width: 400px;
-        @media (max-width:576px) {
-            width: 99%;
+        @media (min-width:375px) and (max-width:820px) {
+            width: 100%;
         }
         .divi1 {
             display: flex;
@@ -462,6 +486,7 @@ main {
             color: $white;
             margin-bottom: 25px;
             font-size: 20px;
+            text-align: center;
         }
         .box p {
             color: #efefef;
@@ -475,13 +500,21 @@ main {
                 height: 45px;
                 line-height: 45px;
                 color: $white;
-                margin-right: 10px;
+                margin: 10px auto;
                 background-color: $shadow-color;
                 text-align: center;
                 transition: all 300ms ease;
                 box-shadow: $black 3px 5px;
                 & a:hover {
                     color: #9f8c65;
+                }
+            }
+
+            .red-social{
+                @include main__display;
+                
+                @media (min-width:576px) and (max-width:820px) {
+                flex-direction: column;
                 }
             }
         }
